# trabalho-final-algoritmos

./: .gitignore  LICENSE  README.md
include/: algorithms.h  improved-bubble-sort-state.h  improved-bubble-sort.h  merge-sort-state.h  merge-sort.h  quick-sort-state.h  quick-sort.h  run-sorter.h  selection-sort-state.h  selection-sort.h  sort-state.h  util.h  window.h
src/: CMakeLists.txt  default_draw.c  improved-bubble-sort.c  main.c  merge-sort.c  quick-sort.c  run-sorter.c  selection-sort.c  util.c  window.c
